<resources>
    <string name="data_usage_additional_reminder">Additional reminder</string>
    <string name="data_usage_no_additional_reminder">No additional reminder</string>
    <string name="data_usage_additional_reminder_summary" formatted="false">%1sMB, %2s</string>
    <string name="data_usage_header_title">Additional reminder settings</string>
    <string name="data_usage_daily_setting_title">Daily</string>
    <string name="data_usage_weekly_setting_title">Weekly</string>
    <string name="data_usage_period_setting_title">Period</string>
    <string name="data_usage_default_warning_flow">%s MB</string>
    <string name="data_usage_week_interval" formatted="false">%1s ~ %2s</string>
    <string name="data_usage_from">From</string>
    <string name="data_usage_to">To</string>
    <string name="data_usage_set_date">Set Date</string>
    <string name="data_usage_set_start_day">Set start day</string>
    <string name="adupsfota_software_update_string_ext">Wireless update</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="bluetooth_advanced_settings">Advanced settings</string>
    <string name="bluetooth_profile_ftp">File transfer</string>
    <string name="bluetooth_ftp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_ftp_profile_summary_connected">Connected to file transfer</string>
    <string name="mtp_transfer_unmount_error_text">SD card can not be unmounted during file transferring</string>
    <string name="mtp_transfer_erase_error_text">SD card can not be erased during file transferring</string>
    <string name="launch_error">"Couldn't launch the application!"</string>
    <string name="dlg_confirm_unmount_usb_title">Unmount USB storage?</string>
    <string name="dlg_confirm_unmount_usb_text">If you unmount the USB storage, some apps you are using will stop and may be unavailable until you remount the USB storage.</string>
    <string name="dlg_error_unmount_usb_title" />
    <string name="dlg_error_unmount_usb_text">"Couldn't unmount USB storage. Try again later."</string>
    <string name="unmount_usb_inform_text">USB storage will be unmounted.</string>
    <string name="sd_eject_usbstorage">Unmount USB storage</string>
    <string name="sd_eject_usbstorage_summary">Unmount USB storage so you can safely remove it</string>
    <string name="sd_mount_usbstorage">Mount USB storage</string>
    <string name="sd_insert_usb_summary">Insert USB storage for mounting</string>
    <string name="usb_ums_title">USB storage</string>
    <string name="usb_ums_summary">XP recommended. Let you transfer files between your computer and your Android device.</string>
    <string name="usb_charge_title">Charge only</string>
    <string name="usb_charge_summary">Stop all USB functions.Let you speed up USB charging and decrease power consumption.</string>
    <string name="NI_Request_ID">Requestor ID</string>
    <string name="NI_Request_ClientName">Client Name</string>
    <string name="agps_str_verify">Verification</string>
    <string name="agps_str_notify">Notification</string>
    <string name="EM_NotifyDialog_title">EM Notify</string>
    <string name="agps_OK">OK</string>
    <string name="agps_str_allow">ALLOW</string>
    <string name="agps_str_deny">DENY</string>
    <string name="agps_str_error">Error</string>
    <string name="AGPS_DEFAULT_STRING">A-GPS Default String</string>
    <string name="AGPS_CAUSE_NETWORK_CREATE_FAIL">Network Create Fail</string>
    <string name="AGPS_CAUSE_BAD_PUSH_CONTENT">Incorrect PUSH content</string>
    <string name="AGPS_CAUSE_NOT_SUPPORTED">Unsupported Operation</string>
    <string name="AGPS_CAUSE_REQ_NOT_ACCEPTED">Requeset Not Accepted</string>
    <string name="AGPS_CAUSE_NO_RESOURCE">No Resourcce to Handle new process</string>
    <string name="AGPS_CAUSE_NETWORK_DISCONN">Network Connection is Down</string>
    <string name="AGPS_CAUSE_REMOTE_ABORT">Remote Side Abort the Session (receive SUPL END)</string>
    <string name="AGPS_CAUSE_TIMER_EXPIRY">Expect Message not Back During a Specific Time Interval</string>
    <string name="AGPS_CAUSE_REMOTE_MSG_ERROR">Receive Incorrect Message Content</string>
    <string name="AGPS_CAUSE_USER_AGREE">User agree on confirmation</string>
    <string name="AGPS_CAUSE_USER_DENY">User deny on confirmation</string>
    <string name="AGPS_CAUSE_NO_POSITION">Only for NO Position</string>
    <string name="AGPS_CAUSE_TLS_AUTH_FAIL">TLS authentication fail</string>
    <string name="USER_RESPONSE_TIMEOUT">Waiting verification timeout</string>
    <string name="AGPS_MODEM_RESET_HAPPEN">Modem reset happen</string>
    <string name="AGPS_EM_RECV_SI_REQ">SI Request Received</string>
    <string name="AGPS_EM_POS_FIXED">Position Fixed</string>
    <string name="AGPS_NOTIFY_ONLY">Location Request Notification</string>
    <string name="AGPS_NOTIFY_ALLOW_NO_ANSWER">Location Request (Allow if no Answer)</string>
    <string name="AGPS_NOTIFY_DENY_NO_ANSWER">Location Request (Deny if no Answer)</string>
    <string name="AGPS_NOTIFY_PRIVACY">Location Request (Privacy)</string>
    <string name="epo_entrance_title">EPO settings</string>
    <string name="epo_entrance_summary">Click to modify EPO configurations</string>
    <string name="agps_settings_title">A-GPS Settings</string>
    <string name="epo_enable_confirm_title">EPO enable confirm</string>
    <string name="epo_enable_confirm_message">It needs a wireless data connection to acquire GPS assistance data (EPO) that may cause extra network fee. Are you sure to turn on GPS assistance?</string>
    <string name="epo_enable_confirm_allow">Continue</string>
    <string name="epo_enable_confirm_deny">Cancel</string>
    <string name="agps_enable_confirm_title">A-GPS Enable Confirm</string>
    <string name="agps_enable_confirm">A-GPS needs a wireless data connection to acquire the assistant data that may cause extra fees. Are you sure to turn on the A-GPS?</string>
    <string name="agps_enable_confirm_allow">Continue</string>
    <string name="agps_enable_confirm_deny">Cancel</string>
    <string name="epo_enable_title">GPS EPO assistance</string>
    <string name="epo_enable_summary">Use GPS assistance data (EPO) to speed up GPS positioning.</string>
    <string name="agps_settings_enable">A-GPS</string>
    <string name="agps_settings_enable_on">GPS can speed up the fixed time of location with assistant data via wireless data connection</string>
    <string name="agps_settings_enable_off">Use assistant data to speed up the fixed time of location with GPS</string>
    <string name="agps_settings_eng_enable">A-GPS settings</string>
    <string name="agps_settings_eng_summary">Set up A-GPS settings</string>
    <string name="agps_disable_on_reboot">Disable after Reboot</string>
    <string name="agps_disable_on_reboot_summary">Disable A-GPS capability after reboot</string>
    <string name="Network_Initiate">Network Request</string>
    <string name="Network_Initiate_Summary_on">Allow network to request position</string>
    <string name="Network_Initiate_Summary_off">Deny network to request position</string>
    <string name="Network_Used">Network Used</string>
    <string name="agps_profile_select">Profile Selector</string>
    <string name="agps_profile_SLP_address_editbox_title">SLP Address</string>
    <string name="port_title">SLP Port</string>
    <string name="tls_title">TLS</string>
    <string name="tls_summary_off">TLS is turned off</string>
    <string name="tls_summary_on">TLS is turned on</string>
    <string name="MobileNetwork_Category">Mobile Network</string>
    <string name="AgpsHelp_Category">Help</string>
    <string name="about_agps_title">About A-GPS</string>
    <string name="about_agps_message">"\u0009 A-GPS (Assisted-GPS) is the system that can improve the startup performance and time-to-first-fix (TTFF) of GPS satellites. 
\u0009 An A-GPS capable device can connect to location servers to acquire the assist data through mobile network data connection. 
\u0009 Notice that the data traffic may cause extra fees under network roaming conditions. Please contact with your operators for the details."</string>
    <string name="epo_auto_download_title">Auto download</string>
    <string name="epo_auto_download_summary">Automatically download satellite position data</string>
    <string name="epo_info_title">EPO file info</string>
    <string name="epo_download_time_title">Download time</string>
    <string name="epo_download_time_summary">Unavailable</string>
    <string name="epo_start_time_title">Start time</string>
    <string name="epo_start_time_summary">Unavailable</string>
    <string name="epo_expire_time_title">Expire time</string>
    <string name="epo_expire_time_summary">Unavailable</string>
    <string name="epo_about_title">About EPO</string>
    <string name="epo_about_message">"\u0009EPO (Extended Prediction Orbit) is one of MediaTek's innovative proprietary off-line server based A-GPS technology. 
\u0009It supports up to 30 days satellite orbit prediction, which can be used to greatly enhance user experience by improving GPS Time To First Fix (TTFF)."</string>
    <string name="Network_Local_and_Roaming_Summary">Use A-GPS both under home and roaming network</string>
    <string name="Network_Only_Local_Summary">Use A-GPS only under home network</string>
    <string name="MobileNetwork_DataConn_off">Data Connection is Off</string>
    <string name="MobileNetwork_off_Summary">Please turn on data connection before using A-GPS</string>
    <string name="WiFiNetwork_on_title">Wi-Fi is Active</string>
    <string name="MobileNetwork_on_Summary">A-GPS needs to access the mobile network via data connections</string>
    <string name="MobileNetwork_SIM_Active">SIM%1$s is Active</string>
    <string name="Network_Roaming_dialog_title">Attention</string>
    <string name="Network_Roaming_dialog_content">If the network under roaming condition, A-GPS data traffic may cause extra roaming fees.</string>
    <string name="epo_download">Download</string>
    <string name="epo_error_no_activite_network">Please turn on data connection before downloading EPO data.</string>
    <string name="epo_cancel_download">Cancel</string>
    <string name="epo_status_stopping">Stopping...</string>
    <string name="gemini_roaming_settings_title">Roaming</string>
    <string name="gemini_data_roaming_title">Data roaming</string>
    <string name="gemini_data_roaming_summary">Connect to data services when roaming</string>
    <string name="gemini_roaming_reminder_title">Show roaming reminder</string>
    <string name="roaming_selection_title">Select roaming type</string>
    <string name="device_info_not_available">Not available</string>
    <string name="treble">Treble</string>
    <string name="bass">Bass</string>
    <string name="music_eq">Music EQ</string>
    <string name="music_eq_summary">%1$s</string>
    <string name="video_eq">Video EQ</string>
    <string name="video_eq_summary">%1$s</string>
    <string name="acer_device_info_title">Device Information</string>
    <string name="acer_apn_version">APN Version</string>
    <string name="product_sku">Product SKU</string>
    <string name="device_info_version">Device Info Version</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model_id">Model ID</string>
    <string name="rom_size">ROM Size</string>
    <string name="ram_size">RAM Size</string>
    <string name="horizontal_pixels">Horizontal Pixels</string>
    <string name="vertical_pixels">Vertical Pixels</string>
    <string name="acer_sn">SN</string>
    <string name="acer_snid">SNID</string>
</resources>