<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/gemini_roaming_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/gemini_data_roaming_title" android:key="data_roaming_settings" android:summary="@string/gemini_data_roaming_summary" android:fragment="com.mediatek.gemini.SimDataRoamingSettings" />
    <ListPreference android:entries="@array/gemini_sim_roaming_reminder_entries" android:title="@string/gemini_roaming_reminder_title" android:key="roaming_reminder_settings" android:dialogTitle="@string/gemini_roaming_reminder_title" android:entryValues="@array/gemini_sim_roaming_reminder_values" />
    <ListPreference android:entries="@array/sim_roaming_selection_entries" android:title="@string/roaming_selection_title" android:key="roaming_selection_settings" android:dialogTitle="@string/roaming_selection_title" android:entryValues="@array/sim_roaming_selection_values" />
</PreferenceScreen>