<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@android:dimen/preference_item_padding_side" android:paddingRight="?android:scrollbarSize" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?android:listDivider" android:showDividers="middle|end">
            <LinearLayout android:orientation="vertical" android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="marquee" android:id="@id/title" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_header_title" android:singleLine="true" android:layout_weight="1.0" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/daily_setting" android:paddingLeft="@android:dimen/preference_item_padding_side" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="marquee" android:id="@id/title" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_daily_setting_title" android:singleLine="true" android:layout_weight="1.0" />
                    <RadioButton android:gravity="center_vertical" android:orientation="vertical" android:id="@id/radio_d" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/settings" android:paddingLeft="@android:dimen/preference_item_padding_side" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/warning_flow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_default_warning_flow" android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/weekly_setting" android:paddingLeft="@android:dimen/preference_item_padding_side" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="marquee" android:id="@id/title" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_weekly_setting_title" android:singleLine="true" android:layout_weight="1.0" />
                    <RadioButton android:gravity="center_vertical" android:orientation="vertical" android:id="@id/radio_w" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/settings" android:paddingLeft="@android:dimen/preference_item_padding_side" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/warning_flow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_default_warning_flow" android:layout_weight="1.0" />
                    <TextView android:id="@id/cycle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/period_setting" android:paddingLeft="@android:dimen/preference_item_padding_side" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
                    <RelativeLayout android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="marquee" android:id="@id/title" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_period_setting_title" android:singleLine="true" />
                    </RelativeLayout>
                    <RadioButton android:gravity="center_vertical" android:orientation="vertical" android:id="@id/radio_p" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/settings" android:paddingLeft="@android:dimen/preference_item_padding_side" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/warning_flow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_default_warning_flow" android:layout_weight="1.0" />
                    <LinearLayout android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_from" android:layout_weight="1.0" />
                        <TextView android:id="@id/beginning" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_to" android:layout_weight="1.0" />
                        <TextView android:id="@id/end" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>